project/syntax_tests/tests_input/unit/bad/Bad35.ty
singleton class Characters { 
    
    variables: {
        character: Char = 'yw'
    }
}
